# RawAccelForLinux

./: ApplyMouseConfig.py  ApplyOnStartUp.sh  Mouse-Settings.sh  README.md  rotation-matrix.py
Mouse Rotation Attempt/: xutils-dev_7.7+5+b1_amd64.deb
Mouse Rotation Attempt/Building_the_X_Window_System/: automake-1.11.2.tar.bz2
Mouse Rotation Attempt/Building_the_X_Window_System/automake-1.11.2/: Makefile  Makefile.in  aclocal  aclocal.m4  automake  config.status  configure
Mouse Rotation Attempt/Building_the_X_Window_System/automake-1.11.2/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
Mouse Rotation Attempt/Building_the_X_Window_System/automake-1.11.2/doc/: Makefile  Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/automake-1.11.2/lib/: Makefile  Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/automake-1.11.2/lib/Automake/: Config.pm  Makefile  Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/automake-1.11.2/lib/am/: Makefile  Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/automake-1.11.2/m4/: Makefile  Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/automake-1.11.2/tests/: Makefile  Makefile.in  aclocal-1.11  automake-1.11  defs
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/: ChangeLog  Makefile.in  configure
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/: Makefile.in  aclocal.m4  config.h.in  configure
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/doc/: Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/gnulib-lib/: Makefile.am  Makefile.in  error.h  getopt-core.h
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/intl/: ChangeLog  Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/intl-csharp/: Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/intl-java/: Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/libasprintf/: Makefile.gnulib  Makefile.in  aclocal.m4  config.h.in  configure
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/m4/: Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/man/: Makefile.in  gettext.1.html.in  gettext.1.in  ngettext.1.html.in  ngettext.1.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/po/: ChangeLog  en@boldquot.po  en@quot.po  gettext-runtime.pot
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/src/: Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-runtime/tests/: Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-tools/: Makefile.in  aclocal.m4  config.h.in  configure
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-tools/doc/: Makefile.in  version.texi
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-tools/emacs/: Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-tools/examples/: Makefile.in  configure
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gettext-tools/gnulib-lib/: Makefile.gnulib  Makefile.in  argmatch.h  gl_linkedhash_list.h  hash.c  hash.h  progname.h
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/gnulib-local/: Makefile.in
Mouse Rotation Attempt/Building_the_X_Window_System/gettext-0.21.1/libtextstyle/: Makefile.in  aclocal.m4  config.h.in  configure
Mouse Rotation Attempt/Building_the_X_Window_System/util-macros-1.19.3/: Makefile  config.status  xorg-macros.pc
Mouse Rotation Attempt/xorg-xf86-input-libinput-master/: .gitignore  .gitlab-ci.yml  COPYING  configure.ac  meson.build  meson_options.txt
Mouse Rotation Attempt/xorg-xf86-input-libinput-master/.gitlab-ci/: fedora-install.sh
Mouse Rotation Attempt/xorg-xf86-input-libinput-master/include/: libinput-properties.h
Mouse Rotation Attempt/xorg-xf86-input-libinput-master/man/: Makefile.am  libinput.man
Mouse Rotation Attempt/xorg-xf86-input-libinput-master/src/: bezier.c  bezier.h  draglock.c  draglock.h  xf86libinput.c
Mouse Rotation Attempt/xorg-xf86-input-libinput-master/test/: test-bezier.c  test-draglock.c
(+95 files in other folders)
